# vision-rs

./: .gitignore  CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs
examples/: 01_ocr_smoke.rs  02_ocr_pixel_buffer.rs  03_face_detect.rs  04_v013_missing_requests.rs  05_tracking.rs  06_request_processing.rs  07_async_recognize_text.rs  08_async_detect_faces.rs  09_async_detect_barcodes.rs  10_async_segmentation.rs
src/: async_api.rs  error.rs  geometry.rs  lib.rs  recognized_points.rs  request_base.rs  sdk.rs
src/aesthetics/: mod.rs
src/animal_body_pose/: mod.rs
src/animals/: mod.rs
src/body_pose/: mod.rs
src/classify/: mod.rs
src/contours/: mod.rs
src/coreml/: mod.rs
src/detect_barcodes/: mod.rs
src/detect_faces/: mod.rs
src/face_landmarks/: mod.rs
src/feature_print/: mod.rs
src/ffi/: mod.rs
src/hand_pose/: mod.rs
src/horizon/: mod.rs
src/human_body_pose_3d/: mod.rs
src/humans/: mod.rs
src/objectness_saliency/: mod.rs
src/optical_flow/: mod.rs
src/person_instance_mask/: mod.rs
src/processing/: mod.rs
src/recognize_text/: mod.rs
src/rectangles/: mod.rs
src/registration/: mod.rs
src/saliency/: mod.rs
src/segmentation/: mod.rs
src/text_rectangles/: mod.rs
src/tracking/: mod.rs
src/trajectories/: mod.rs
swift-bridge/: Package.swift
swift-bridge/Sources/VisionBridge/: AnimalsClassification.swift  Async.swift  Barcodes.swift  Core.swift  FaceDetection.swift  FaceLandmarks.swift  FeatureHumansAesthetics.swift  ImageAnalysisExtras.swift  MissingRequests.swift  PoseContours.swift  PoseExtras.swift  Rectangles.swift  RequestProcessing.swift  RequestProcessingVideo.swift  Saliency.swift  ScaledForegroundMask.swift  SegmentationOpticalFlowCoreML.swift  TextRecognition.swift  Tracking.swift  TrackingAdvanced.swift  TrackingCommon.swift  TrajectoriesRegistration.swift  Vision.swift
swift-bridge/Sources/VisionBridge/include/: VisionBridge.h
tests/: api_coverage.rs  async_api_tests.rs  request_observations.rs  request_processing.rs  segmentation.rs
