[package]
name = "apple-vision"
version = "0.15.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/vision-rs"
repository = "https://github.com/doom-fish/vision-rs"
description = "Safe Rust bindings for Apple's Vision framework — OCR, object detection, face landmarks on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["vision", "ocr", "macos", "computer-vision", "apple"]
categories = ["api-bindings", "os::macos-apis", "computer-vision"]
rust-version = "1.70"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "examples/**/*",
    "tests/**/*",
    "swift-bridge/Package.swift",
    "swift-bridge/Sources/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
    "CHANGELOG.md",
]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "apple_vision"
crate-type = ["lib"]

[features]
default = [
    "recognize_text", "detect_faces", "detect_barcodes", "saliency",
    "face_landmarks", "body_pose", "hand_pose", "contours", "animals",
    "classify", "rectangles", "horizon", "feature_print", "humans",
    "aesthetics", "segmentation", "optical_flow", "coreml", "tracking",
]

# Per-request-type feature flags.
recognize_text = []
detect_faces = []
detect_barcodes = []
saliency = []
face_landmarks = ["detect_faces"]
body_pose = []
hand_pose = ["body_pose"]
contours = ["face_landmarks"]
animals = ["detect_faces"]
classify = []
rectangles = ["face_landmarks"]
horizon = []
feature_print = []
humans = ["detect_faces"]
aesthetics = ["detect_faces"]
segmentation = []
optical_flow = ["segmentation"]
coreml = ["classify"]
tracking = ["recognize_text", "rectangles"]

[dependencies]
apple-cf = { version = ">=0.4.0, <0.6", default-features = false, features = ["cv", "iosurface"] }
libc = "0.2.186"

[dev-dependencies]
regex-lite = "0.1"

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "01_ocr_smoke"
required-features = ["recognize_text"]

[[example]]
name = "02_ocr_pixel_buffer"
required-features = ["recognize_text"]

[[example]]
name = "03_face_detect"
required-features = ["detect_faces", "recognize_text"]

[[example]]
name = "05_tracking"
required-features = ["tracking"]

[profile.release]
debug = "full"
strip = "none"
